--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,9 @@ python-dateutil>=2.8.0
 # Validation
 cerberus>=1.3.0
 
+# Character encoding detection
+chardet>=5.0.0
+
 # Development dependencies
 pytest>=7.4.0
 pytest-qt>=4.2.0
