--- a/assets/templates/welcome_email.yaml
+++ b/assets/templates/welcome_email.yaml
@@ -8,7 +8,9 @@ content: |
   
   Thank you for your interest in our services. We're excited to have {company} as part of our community.
   
-  If you have any questions, please don't hesitate to contact us.
+  Our team is here to help you get the most out of our platform. If you have any questions or need assistance getting started, please don't hesitate to reach out.
+  
+  We look forward to working with you!
   
   Best regards,
   The Team
