--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ PySide6>=6.5.0
 # HTTP requests for WhatsApp API
 requests>=2.31.0
 
+# AWS integration for WhatsApp Business API
+boto3>=1.28.0
+botocore>=1.31.0
+
 # CSV processing
 pandas>=2.0.0
 
