🏗️ MAJOR: Complete project restructure for professional organization
✅ RESTRUCTURE COMPLETED:
- Clean root directory (8 essential files, was 25+)
- Organized documentation in docs/ with logical subdirectories
- Moved test data to tests/fixtures/
- Reorganized build scripts in scripts/build/
- Enhanced build system with proper logging
- Updated all paths and references

✅ TECHNICAL IMPROVEMENTS:
- Fixed PyInstaller specs for new structure
- Enhanced build scripts with error handling
- Organized build outputs in build/ directory
- Updated Makefile with new targets
- Comprehensive documentation structure

✅ VERIFICATION:
- macOS build: SUCCESS (189M app, 94M DMG)
- All functionality preserved
- Professional project structure
- Ready for production and collaboration

📁 NEW STRUCTURE:
- docs/{user,dev,api,summaries}/ - Organized documentation
- tests/{unit,integration,fixtures}/ - Clean test structure
- scripts/{build,dev,deploy}/ - Logical script organization
- build/{dist,temp,logs}/ - Organized build outputs

🎯 BENEFITS:
- Professional appearance following Python standards
- Enhanced maintainability and navigation
- Better developer experience
- CI/CD ready architecture
- Scalable project organization

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,9 @@ logs/
 temp/
 *.dmg
 *.exe
+# Project-specific organized structure
+build/dist/
+build/temp/
+build/logs/
+tests/fixtures/*.csv.bak
+docs/temp/
