--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,16 +35,32 @@ jobs:
       with:
         python-version: '3.11'
         
+    - name: Verify Python installation
+      run: |
+        python --version
+        pip --version
+        
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel
         pip install -e ".[dev]"
         
-    - name: Install PyInstaller
+    - name: Verify PyInstaller installation
       run: |
-        pip install pyinstaller
+        python -m PyInstaller --version
         
-    - name: Check build script exists
+    - name: Test Python imports
+      run: |
+        Write-Host "Testing critical imports..."
+        python -c "import sys; print(f'Python: {sys.version}')"
+        python -c "import PySide6; print(f'PySide6: {PySide6.__version__}')"
+        python -c "import pandas; print(f'Pandas: {pandas.__version__}')"
+        python -c "import yaml; print('PyYAML: OK')"
+        python -c "import requests; print(f'Requests: {requests.__version__}')"
+        python -c "import win32com.client; print('Win32com: OK')" 
+        Write-Host "✅ All critical imports successful"
+        
+    - name: Check build script and assets exist
       run: |
         if (Test-Path "scripts\build\build_windows.py") {
           Write-Host "✅ build_windows.py found"
@@ -55,14 +71,44 @@ jobs:
           exit 1
         }
         
+        if (Test-Path "assets\icons\csc-reach.ico") {
+          Write-Host "✅ Icon file found"
+        } else {
+          Write-Host "❌ Icon file not found at assets\icons\csc-reach.ico"
+          Write-Host "Available icon files:"
+          if (Test-Path "assets\icons") { dir assets\icons } else { Write-Host "assets\icons directory not found" }
+        }
+        
+        if (Test-Path "scripts\build\build_windows.spec") {
+          Write-Host "✅ PyInstaller spec file found"
+        } else {
+          Write-Host "❌ PyInstaller spec file not found"
+        }
+        
     - name: Build Windows executable
       run: |
+        Write-Host "🚀 Starting Windows build process..."
         python scripts\build\build_windows.py
+      continue-on-error: false
         
     - name: Check build output
       run: |
         Write-Host "Build directory contents:"
         if (Test-Path "build") { dir build -Recurse } else { Write-Host "build directory not found" }
+        
+        # Check for build logs
+        if (Test-Path "build\logs") {
+          Write-Host "`nBuild logs:"
+          dir build\logs
+          if (Test-Path "build\logs\build_windows_error.log") {
+            Write-Host "`n❌ Error log found:"
+            Get-Content "build\logs\build_windows_error.log" | Select-Object -Last 50
+          }
+          if (Test-Path "build\logs\build_windows.log") {
+            Write-Host "`n📋 Build log (last 20 lines):"
+            Get-Content "build\logs\build_windows.log" | Select-Object -Last 20
+          }
+        }
         
         if (Test-Path "build\dist\CSC-Reach\CSC-Reach.exe") {
           Write-Host "✅ Windows executable created successfully"
@@ -71,6 +117,14 @@ jobs:
         } else {
           Write-Host "❌ Windows executable not found"
           Write-Host "Expected location: build\dist\CSC-Reach\CSC-Reach.exe"
+          
+          # Show what was actually created
+          Write-Host "`nActual build output:"
+          if (Test-Path "build\dist") { 
+            dir build\dist -Recurse 
+          } else { 
+            Write-Host "No build\dist directory found" 
+          }
           exit 1
         }
         
