feat: add everything

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,12 +7,36 @@ addopts =
     --verbose
     --tb=short
     --strict-markers
+    --strict-config
     --disable-warnings
     --cov=src/multichannel_messaging
-    --cov-report=html
+    --cov-report=html:htmlcov
+    --cov-report=xml:coverage.xml
     --cov-report=term-missing
+    --cov-branch
+    --cov-fail-under=80
+    --junit-xml=test-results.xml
+    --html=test-report.html
+    --self-contained-html
+    --json-report
+    --json-report-file=test-report.json
+    --timeout=300
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::UserWarning:.*PySide6.*
+    error::pytest.PytestUnraisableExceptionWarning
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    gui: GUI tests
-    slow: Slow running tests
+    unit: Unit tests for individual components
+    integration: Integration tests for component interactions
+    gui: GUI tests requiring display
+    slow: Slow running tests (> 5 seconds)
+    network: Tests requiring network access
+    external: Tests requiring external services
+    smoke: Smoke tests for basic functionality
+    regression: Regression tests for bug fixes
+    performance: Performance and load tests
+    security: Security-related tests
+    platform_windows: Windows-specific tests
+    platform_macos: macOS-specific tests
+    platform_linux: Linux-specific tests
