--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,21 @@ chardet>=5.0.0
 pytest>=7.4.0
 pytest-qt>=4.2.0
 pytest-cov>=4.1.0
+pytest-xvfb>=3.0.0
+pytest-mock>=3.11.0
+pytest-timeout>=2.1.0
+pytest-html>=3.2.0
+pytest-json-report>=1.5.0
 black>=23.0.0
 flake8>=6.0.0
+flake8-docstrings>=1.7.0
+flake8-import-order>=0.18.0
 mypy>=1.5.0
+bandit>=1.7.0
+isort>=5.12.0
+coverage>=7.3.0
+coverage-badge>=1.1.0
+junitparser>=3.1.0
 
 # Build tools
 pyinstaller>=5.13.0
