feat: Add multi-format table processing support
- Expand CSV processor to support 9 file formats: CSV, TSV, Excel (XLSX/XLS), JSON, JSONL, pipe-delimited, semicolon-delimited
- Add automatic format detection based on file extension and content analysis
- Implement format-specific processing optimized for each file type
- Maintain all robust features: encoding detection, intelligent parsing, comprehensive validation, streaming
- Add Excel dependencies (openpyxl, xlrd) to requirements and build configurations
- Update PyInstaller specs for both macOS and Windows builds
- Maintain complete backward compatibility with existing CSV methods
- Add comprehensive test suite: 26 unit tests + 9 integration tests
- Add complete documentation and working demonstration script
- Update README with new multi-format capabilities

This major enhancement transforms the CSV-only processor into a comprehensive
table processing system while maintaining 100% backward compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "multichannel-messaging"
-version = "1.0.1"
+version = "1.0.0"
 description = "Multi-Channel Bulk Messaging System"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -40,6 +40,8 @@ dependencies = [
     "python-dateutil>=2.8.0",
     "cerberus>=1.3.0",
     "chardet>=5.0.0",
+    "openpyxl>=3.1.0",
+    "xlrd>=2.0.0",
     "psutil>=5.9.0",
 ]
 
@@ -114,7 +116,7 @@ profile = "black"
 multi_line_output = 3
 line_length = 88
 known_first_party = ["multichannel_messaging"]
-known_third_party = ["PySide6", "pandas", "requests", "yaml", "colorlog", "babel", "cerberus", "chardet", "psutil"]
+known_third_party = ["PySide6", "pandas", "requests", "yaml", "colorlog", "babel", "cerberus", "chardet", "openpyxl", "xlrd", "psutil"]
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
 include_trailing_comma = true
 force_grid_wrap = 0
