--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,10 @@ cerberus>=1.3.0
 # Character encoding detection
 chardet>=5.0.0
 
+# Excel file support
+openpyxl>=3.1.0
+xlrd>=2.0.0
+
 # Development dependencies
 pytest>=7.4.0
 pytest-qt>=4.2.0
